# napari-fast4dreg

./: .gitignore  API_REFERENCE.md  LICENSE  README.md  examples_api_usage.py  pyproject.toml  setup.cfg  test_axis_fix.py  test_gpu_detection.py  test_registration.py  tox.ini
.github/workflows/: test_and_deploy.yml
example_files/: xtitched_organoid_timelapse_ch0_cytosol_ch1_nuclei-1_drifts.csv  xtitched_organoid_timelapse_ch0_cytosol_ch1_nuclei_drifts.csv
example_files/tmp_data/: .zarray  0.0.0.0.0  0.0.1.0.0  0.1.0.0.0  0.1.1.0.0  0.10.0.0.0  0.10.1.0.0  0.11.0.0.0  0.11.1.0.0  0.12.0.0.0  0.12.1.0.0  0.13.0.0.0  0.13.1.0.0  0.14.0.0.0  0.14.1.0.0  0.15.0.0.0  0.15.1.0.0  0.16.0.0.0  0.16.1.0.0  0.17.0.0.0  0.17.1.0.0  0.18.0.0.0  0.18.1.0.0  0.19.0.0.0  0.19.1.0.0  0.2.0.0.0  0.2.1.0.0  0.20.0.0.0  0.20.1.0.0  0.21.0.0.0  0.21.1.0.0  0.22.0.0.0  0.22.1.0.0  0.23.0.0.0  0.23.1.0.0  0.24.0.0.0  0.24.1.0.0  0.25.0.0.0  0.25.1.0.0  0.26.0.0.0  (+2663 more)
src/napari_fast4dreg/: __init__.py  _axis_utils.py  _fast4Dreg_functions.py  _reader.py  _sample_data.py  _widget.py  api.py  napari.yaml
src/napari_fast4dreg/_tests/: drifts.csv  test_api.py  test_functions.py  test_reader.py  test_sample_data.py  test_widget.py  test_writer.py
src/napari_fast4dreg/_tests/tmp_data/: 10.npy  14.npy  15.npy  18.npy  5.npy  6.npy  8.npy  9.npy
